# quote-server

./: Dockerfile  Makefile  README.md
client/: Cargo.toml
client/src/: main.rs
data/: quotes.txt
scripts/: run.sh
server/: Cargo.toml
server/src/: main.rs
