[package]
name = "quote-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = "0.1"
hashcash = "0.1.1"
futures = { version = "0.3.0", features = ["thread-pool"]}
