[package]
name = "quote-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = "0.1"
tokio-io-timeout = "1.2.0"
hashcash = "0.1.1"
futures = { version = "0.3.0", features = ["thread-pool"]}
rand = "0.8.5"
